1998-11-05  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_aix.c: typo fixes courtest of Philippe Defert

1998-11-04  Yo Ric Dude  <ricdude@ix.netcom.com>

	* TODO, esd.h, esdctl.c, esdmgr.c, proto.c: It really should have
 	been esd_free_all_info(), and while we're at it, make it do
 	something potentially useful.
  	
	* esound.spec: set it up for autoconf to update the version
 	number, then lost the changes. thanks to Michael Sterrett.

1998-11-03  Christopher Blizzard  <blizzard@appliedtheory.com>

	* esdctl.c (main): Change call from esd_free_all_info() to
 	esd_free_esd_info() so that this will build.

1998-11-03  Yo Ric Dude  <ricdude@ix.netcom.com>

	* TODO, configure.in: update version number
	* Makefile.am, esd-server.h, esd.h, esdctl.c, proto.c, esdmgr.c: 
	add initial framework for remote management of server, filter out
	diagnostic/debugging information from binary if we don't want it.
	also inlcude esound.spec file in distribution.

Sat Oct 31 21:36:07 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: don't try to open local sound device if ESPEAKER is set

1998-10-31  Yo Ric Dude  <ricdude@ix.netcom.com>

	* EsounD.html, EsounD.ps, Makefile.am: replaced EsounD.html with
 	EsounD.ps until the doc subdirectory is functional with docbook.
	* configure.in: call it 0.2.6.

Fri Oct 30 20:39:16 PST 1998 Manish Singh <yosh@gimp.org>

	* esddsp.c: provide implementation for close() to expire sndfd

1998-10-28  Yo Ric Dude  <ricdude@ix.netcom.com>

	* esound.spec.in: reordered the changelog entries, as rpm likes to 
	complain about it if the order is backwards...

1998-10-24  Yo Ric Dude  <ricdude@ix.netcom.com>

	* audio_alsa.c: reworked alsa card detection per patch from 
	Andrew Clausen <clausen@alphalink.com.au>

Wed Oct 21 23:57:11 1998  Raph Levien  <raph@gimp.org>

	* esdplay.c (play_file): The computation of bytes_per_frame was
	not taking the number of channels into account. It does now.

1998-10-21  Yo Ric Dude  <ricdude@ix.netcom.com>
